# ContinualGNN

./: .gitignore  README.md  pyproject.toml
res/cora/0/: graph_sage.pkl
res/cora/1/: graph_sage.pkl
res/cora/2/: graph_sage.pkl
scripts/: format-lint.sh
src/: M  main_sage.py  main_stream.py  run_cuda.sh  utils.py
src/extensions/: detection.py  memory_handler.py
src/handlers/: data_handler.py  model_handler.py  stream_data_handler.py
src/layers/: aggregator.py  sage_conv.py  sampler.py
src/models/: ewc.py  graph_sage.py
